dons_tests/valid_kxi/nested_dot.kxi
class MyClass {
    public int x;
    static public MyClass myfunc() {}
}
void main(){
    MyClass.myfunc().x;
}
