dons_tests/invalid_kxi/nonstatic_in_static.kxi
class MyClass {
    public int x;
    static public int myfunc() {
        return x + 1;
    }
}
void main(){}
